<resources>
    <string name="app_name">RoomAllocator</string>
    <string name="dont_have_account">Don\'t have account</string>
    <string name="login">Login</string>
    <string name="sign_up">SignUp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_user_navigation">UserNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_room">Add Room</string>
    <string name="add_a_new_room">Add a New Room</string>
    <string name="name">name</string>
    <string name="phone_no">phone no.</string>
</resources>